# PORT-EK-version-2

./: .gitattributes  .gitignore  INSTALL.md  LICENSE  PORTEKrun.py  README.md  pyproject.toml  requirements.txt  todo.txt
Analysis/: 1000.subsets.networks.for.random.walk.R
Analysis/Main.figures/: Fig_1f_Kmer.weight.R  Fig_1g_Kmer.count.isolate.R  Fig_1g_subtype.kmer.count.R  Fig_1h_1i_kmer_coverage_quantiles.R  Fig_2a_2d_Kmer.log2RMSE.scatter.plot.R  Fig_2e_bar_plots.R  Fig_2f_2g_Clustering_Heatmaps_genes_unique_kmers.R  Fig_2h_2i_Clustering_Heatmaps_genes_common_kmers.R  Fig_3a_Kmer.LG.types.R  Fig_3b_Kmer.multinomial.LG.subtypes.R  Fig_3c_Kmer.NN.R  Fig_3d_3g_Euclidean.dist.heatmap.R  Fig_3f_bootstrapping_to_calculate_assortativity_nominal_from_mismatched_control.R  Fig_4b_4f_random.walk.isolate.R  Fig_4b_Kmer.multinomial.LG.subtypes.R  Fig_4c_Kmer.NN.R  Fig_4d_Kmer.network.isolate.R  Fig_4e_4h_Euclidean.dist.heatmap.R  Fig_4e_4h_create_network_based_on_subtype_kmer_count.R  Fig_4e_4h_plot_network_based_on_subtype_kmer_count.R  Fig_4f_4j_random.walk.subtype.R  Fig_4k_bootstrapping_to_calculate_assortativity_nominal_isolate.R  Fig_4l_bootstrapping_to_calculate_assortativity_nominal_kmer.R
Input.HIV.sequence/: DNA.sequences  RNA.sequences  UTF-8LANL_incorrect_subtype.xlsx
portek/: __init__.py  portek_enriched.py  portek_findk.py  portek_map.py  portek_map_str.py  portek_tree.py  portek_utils.py
templates/: config.yaml  example_config.yaml
test/: conftest.py  enriched.py  map.py  test_findk.py  test_map.py  test_ref_free.py  test_utils.py
tests/: conftest.py
(+46 files in other folders)
